Fix horizontal scrolling

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,5 +1,6 @@
 body {
   width: 100%;
+  overflow-x: hidden;
 }
 
 .links,
